--- a/src/contact.html
+++ b/src/contact.html
@@ -58,7 +58,6 @@
                 <p class="text-center">Have a question? Please use the form below to send a message and I will get
                     back to you as soon as possible. Thank you!</p>
                 <form id="contact-form" class="contact-form">
-                    <input type="hidden" name="contact_number" value="697483">
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Your Name*" name="user_name" required />
                     </div>
@@ -70,7 +69,7 @@
                         <input type="tel" class="form-control" placeholder="Phone Number*" name="user_phone" required />
                     </div>
                     <div class="form-group">
-                        <textarea class="form-control" placeholder="Message*" rows="5" name="user_message"
+                        <textarea class="form-control" placeholder="Message*" rows="5" name="message"
                             required></textarea>
                     </div>
                     <div class="form-check">
@@ -98,9 +97,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.9/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
-    <script src="./javascripts/contact.js"></script>
-
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script type="module" src="./javascripts/contact.js"></script>
 </body>
 
 </html>
