just need to do portfolio

--- a/src/about.html
+++ b/src/about.html
@@ -9,9 +9,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="./stylesheets/main.css">
     <link rel="stylesheet" href="./stylesheets/about.css">
-    <style>
-
-    </style>
 </head>
 
 <body>
@@ -79,7 +76,7 @@
                     </p>
                     <div class="buttons01">
                         <a href="./images/Mixon_Resume_SoftwareDeveloperPDF.pdf" target="_blank" class="btn resume-btn">MY RESUME</a>
-                        <a href="./contact.html" target="_blank" class="btn contact-btn">CONTACT ME</a>
+                        <a href="./contact.html" class="btn contact-btn">CONTACT ME</a>
                     </div>
                 </div>
             </div>
@@ -100,7 +97,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.9/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script>src="./"</script>
 </body>
 
 </html>
