--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
                     <div class="buttons01">
                         <a href="./images/Mixon_Resume_SoftwareDeveloperPDF.pdf" target="_blank"
                             class="btn resume-btn">MY RESUME</a>
-                        <a href="./contact.html" target="_blank" class="btn contact-btn">CONTACT ME</a>
+                        <a href="./contact.html" class="btn contact-btn">CONTACT ME</a>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 introRight">
