--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -9,9 +9,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="./stylesheets/main.css">
     <link rel="stylesheet" href="./stylesheets/index.css">
-    <style>
-
-    </style>
 </head>
 
 <body>
@@ -49,7 +46,7 @@
                         innovate in his coding career.</p>
                     <div class="buttons01">
                         <a href="./images/Mixon_Resume_SoftwareDeveloperPDF.pdf" target="_blank" class="btn resume-btn">MY RESUME</a>
-                        <a href="./contact.html" target="_blank" class="btn contact-btn">CONTACT ME</a>
+                        <a href="./contact.html" class="btn contact-btn">CONTACT ME</a>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 introRight">
